--- a/pages/alumni/list/list.wxss
+++ b/pages/alumni/list/list.wxss
@@ -60,7 +60,7 @@ page {
   padding: 20rpx 26rpx;
   box-shadow: none;
   border-bottom: none !important;
-  margin-bottom: 0;
+  margin-bottom: 30rpx;
 }
 
 .search-input-wrap {
@@ -134,7 +134,7 @@ page {
   border-top: none !important;
   position: relative;
   z-index: 1;
-  min-height: 80rpx;
+  min-height: 85rpx;
   justify-content: space-around;
 }
 
@@ -316,6 +316,19 @@ view, text, picker, input, button, image, navigator {
   border: 3rpx solid #e0e0e0;
   background-color: #ffffff;
   box-shadow: 0 2rpx 8rpx rgba(0, 0, 0, 0.1);
+  overflow: hidden;
+  position: relative;
+}
+
+.alumni-avatar image {
+  position: absolute;
+  top: -10rpx;
+  left: -10rpx;
+  right: -10rpx;
+  bottom: -10rpx;
+  width: calc(100% + 20rpx);
+  height: calc(100% + 20rpx);
+  object-fit: cover;
 }
 
 .card-info {
@@ -373,7 +386,7 @@ view, text, picker, input, button, image, navigator {
   display: flex;
   align-items: center;
   gap: 16rpx;
-  margin-top: 12rpx;
+  margin-top: 25rpx;
 }
 
 .card-action {
