--- a/pages/alumni/list/list.wxss
+++ b/pages/alumni/list/list.wxss
@@ -431,7 +431,7 @@ view, text, picker, input, button, image, navigator {
 
 .follow-btn.followed {
   background: transparent;
-  border: 2rpx solid #40B2E6;
+  border: 2rpx solid #40B2E6 !important;
   color: #40B2E6;
 }
 
