--- a/pages/school/list/list.wxss
+++ b/pages/school/list/list.wxss
@@ -54,9 +54,7 @@ page {
   background: #0089DF;
   overflow: hidden;
   border-bottom: none;
-  padding-bottom: 0;
-  margin-bottom: 0;
-  box-sizing: border-box;
+  bottom: 0;
 }
 
 /* 搜索栏 */
@@ -64,7 +62,7 @@ page {
   padding: 20rpx 26rpx;
   box-shadow: none;
   border-bottom: none !important;
-  margin-bottom: 0;
+  margin-bottom: 30rpx;
 }
 
 .search-input-wrap {
@@ -138,7 +136,7 @@ page {
   border-top: none !important;
   position: relative;
   z-index: 1;
-  min-height: 80rpx;
+  min-height: 85rpx;
   justify-content: space-around;
 }
 
@@ -468,7 +466,7 @@ view, text, picker, input, button, image, navigator {
   align-items: center;
   justify-content: center;
   background: transparent;
-  border: 2rpx solid #40B2E6;
+  border: 2rpx solid #40B2E6 !important;
   color: #40B2E6;
   font-size: 24rpx;
   font-family: 'PingFang SC', 'PingFang SC Medium', sans-serif;
