--- a/pages/local-platform/list/list.wxml
+++ b/pages/local-platform/list/list.wxml
@@ -9,7 +9,7 @@
   <custom-nav-bar showBack="{{true}}"></custom-nav-bar>
   <!-- 顶部图片 -->
   <view class="top-image-container">
-    <image class="top-image" src="https://cni-alumni.yannqing.com/upload/images/2026/02/03/76e9ae49-1c52-4587-be1c-91bc90e483f6.png" mode="aspectFit" />
+    <image class="top-image" src="https://cni-alumni.yannqing.com/upload/images/2026/02/06/f782b6f3-c0b0-4b87-8ab5-a282c5798191.png" mode="aspectFit" />
   </view>
   
   <!-- 搜索栏和筛选条件容器 -->
@@ -18,25 +18,33 @@
     <view class="search-bar">
       <view class="search-input-wrap">
         <image class="search-left-icon" src="{{iconSearch}}" mode="aspectFit" />
-        <input class="search-input" type="text" placeholder="搜索校处会名称或城市" placeholder-style="color:rgba(255,255,255,0.7);font-family:'PingFang SC',sans-serif;" value="{{keyword}}" bindinput="onSearchInput" bindconfirm="onSearch" />
+        <input class="search-input" type="text" placeholder="搜索校促会名称或城市" placeholder-style="color:rgba(255,255,255,0.7);font-family:'PingFang SC',sans-serif;" value="{{keyword}}" bindinput="onSearchInput" bindconfirm="onSearch" />
         <view class="search-button" bindtap="onSearch">搜索</view>
       </view>
     </view>
     
     <!-- 筛选区域 -->
     <view class="filter-section">
-      <view class="filter-item" wx:for="{{filters}}" wx:key="label" data-index="{{index}}" bindtap="openFilterOptions">
-        <text>{{item.options[item.selected]}}</text>
+      <!-- 城市筛选 -->
+      <view class="filter-item">
+        <picker bindchange="onCityChange" range="{{filters[0].options}}" value="{{filters[0].selected}}">
+          <text>{{filters[0].options[filters[0].selected]}}</text>
+        </picker>
         <text class="filter-arrow">▾</text>
       </view>
-    </view>
-  </view>
-
-  <view wx:if="{{showFilterOptions}}">
-    <view class="filter-mask" bindtap="closeFilterOptions"></view>
-    <view class="filter-options-panel">
-      <view class="option-item {{optIndex === filters[activeFilterIndex].selected ? 'active' : ''}}" wx:for="{{filters[activeFilterIndex].options}}" wx:key="*this" wx:for-index="optIndex" data-option-index="{{optIndex}}" bindtap="selectFilterOption">
-        {{item}}
+      <!-- 状态筛选 -->
+      <view class="filter-item">
+        <picker bindchange="onStatusChange" range="{{filters[1].options}}" value="{{filters[1].selected}}">
+          <text>{{filters[1].options[filters[1].selected]}}</text>
+        </picker>
+        <text class="filter-arrow">▾</text>
+      </view>
+      <!-- 排序筛选 -->
+      <view class="filter-item">
+        <picker bindchange="onSortChange" range="{{filters[2].options}}" value="{{filters[2].selected}}">
+          <text>{{filters[2].options[filters[2].selected]}}</text>
+        </picker>
+        <text class="filter-arrow">▾</text>
       </view>
     </view>
   </view>
